--- a/index.html
+++ b/index.html
@@ -134,8 +134,7 @@
               <div class="home-content-box-inner text-center">
                 <div class="home-heading animated fadeInDown">
                   <h3>
-                    Kahenya <br />
-                    Anita
+                    Styles <br />
                   </h3>
                 </div>
                 <div class="home-btn wow fadeInUp" data-wow-delay="0.3s">
@@ -157,8 +156,8 @@
               <div class="home-content-box-inner text-center">
                 <div class="home-heading animated fadeInDown">
                   <h3>
-                    Anita <br />
-                    Kahenya
+                    N' <br />
+                    Smiles
                   </h3>
                 </div>
                 <div class="home-btn fadeInDown">
