add link to booking.html

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                 <div class="home-btn wow fadeInUp" data-wow-delay="0.3s">
                   <a
                     class="js-scroll-trigger"
-                    href="#contact"
+                    href="#booking.html"
                     role="button"
                     title="View Our Work"
                     ><button class="btn btn-lg btn-general btn-greenish">
