add changes to services list

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 </h3>
               </div>
               <div class="home-btn wow fadeInUp" data-wow-delay="0.3s">
-                <a class="js-scroll-trigger" href="#contact" role="button" title="View Our Work"><button
+                <a class="js-scroll-trigger" href="#book" role="button" title="View Our Work"><button
                     class="btn btn-lg btn-general btn-greenish">
                     Book Now
                   </button></a>
@@ -638,6 +638,8 @@
                       <option value="">Hair Coloring</option>
                       <option value="">Shave</option>
                       <option value="">Hair Conditioning</option>
+                      <option value="">Texturizing</option>
+                      <option value="">Nail Services</option>
                     </select>
                   </div>
                 </div>
