add changes to footer

--- a/index.html
+++ b/index.html
@@ -679,7 +679,7 @@
         </div>
         <div class="row">
           <div class="col-md-5">
-            <span class="copyright">Copyright &copy; 2020 Design By Quintet Barbers
+            <span class="copyright">Copyright &copy; 2020 Design By Stles n Smiles Barbers & Salon
             </span>
           </div>
           <div class="col-md-3">
