modified the services section

--- a/index.html
+++ b/index.html
@@ -149,16 +149,16 @@
       <div class="row text-center">
         <div class="col-md-3 col-sm-6">
           <div class="service-cont wow fadeInUp" data-wow-delay="0.3s">
-            <img src="img/service/service-1.jpg" alt="" class="img-fluid" />
+            <img src="img/service/braiding.jpg" alt="" class="img-fluid" />
             <div class="service-desc">
-              Haircut
+              Braiding
               <p>Ksh.100</p>
             </div>
           </div>
         </div>
         <div class="col-md-3 col-sm-6">
           <div class="service-cont wow fadeInUp" data-wow-delay="0.6s">
-            <img src="img/service/service-2.jpg" alt="" class="img-fluid" />
+            <img src="img/service/shave.jpg" alt="" class="img-fluid" />
             <div class="service-desc">
               Trimming
               <p>Ksh.120</p>
@@ -167,16 +167,16 @@
         </div>
         <div class="col-md-3 col-sm-6">
           <div class="service-cont wow fadeInUp" data-wow-delay="0.9s">
-            <img src="img/service/service-3.jpg" alt="" class="img-fluid" />
+            <img src="img/service/dreads.jpg" alt="" class="img-fluid" />
             <div class="service-desc">
-              Shaving
+              Dreadlocks
               <p>Ksh.80</p>
             </div>
           </div>
         </div>
         <div class="col-md-3 col-sm-6">
           <div class="service-cont wow fadeInUp" data-wow-delay="1.2s">
-            <img src="img/service/service-4.jpg" alt="" class="img-fluid" />
+            <img src="img/service/colour.jpg" alt="" class="img-fluid" />
             <div class="service-desc">
               Coloring
               <p>Ksh.70</p>
@@ -205,7 +205,20 @@
             <h3>Styles n' Smiles</h3>
             <div class="bord-bottom"></div>
             <p>
-              We are Styles n' Smiles, located at The Junction Mall, ground floor-room 32. We chose this location for the convinience of our customers and to have a wider market to serve clients. Although we are online, we also have some reserved spaces to serve those who call in without prior appointment but this is not convinient for most customers. This shop was initially formed by four people namely; Jorim Opondo, Rose Kairu, Abdunasir Abdulkahir, Anita Kahenya and Donald Mwenda. We hired around twenty five stuff members (15 professional salonists and 10 professional barbers) to ensure maximum benefit to the customers. They do say time is money and time waits for no man. Don't you hate it when you have to follow a long queue just to get a trim making you waste your time. Well at Styles n' Smiles, it is a different story. We try to avoid that and we want our cutomers to have the best experience. We noticed that people usually end up wasting their time at the salon and barber. For us, people book appointments and the services to be offered at specified times. This has been one of our best accomplishents because customers do not have to waste their time and not forgeting the quality of our services. You are guaranteed to come out of our salon looking great. We can serve 10 customers simultaneously just to show you how fast we are. In the near future, we intend to create branches to expand our business and offer the best services.
+              We are Styles n' Smiles, located at The Junction Mall, ground floor-room 32. We chose this location for
+              the convinience of our customers and to have a wider market to serve clients. Although we are online, we
+              also have some reserved spaces to serve those who call in without prior appointment but this is not
+              convinient for most customers. This shop was initially formed by four people namely; Jorim Opondo, Rose
+              Kairu, Abdunasir Abdulkahir, Anita Kahenya and Donald Mwenda. We hired around twenty five stuff members
+              (15 professional salonists and 10 professional barbers) to ensure maximum benefit to the customers. They
+              do say time is money and time waits for no man. Don't you hate it when you have to follow a long queue
+              just to get a trim making you waste your time. Well at Styles n' Smiles, it is a different story. We try
+              to avoid that and we want our cutomers to have the best experience. We noticed that people usually end up
+              wasting their time at the salon and barber. For us, people book appointments and the services to be
+              offered at specified times. This has been one of our best accomplishents because customers do not have to
+              waste their time and not forgeting the quality of our services. You are guaranteed to come out of our
+              salon looking great. We can serve 10 customers simultaneously just to show you how fast we are. In the
+              near future, we intend to create branches to expand our business and offer the best services.
             </p>
             <a href="#contact" class="img-fluid js-scroll-trigger"><button
                 class="btn btn-general btn-white">ENQUIRIES</button></a>
@@ -412,12 +425,8 @@
   <section id="testimonials" class="testimonials">
     <div class="container">
       <div class="row">
-        <div class="bar" style="margin-top: -1in;">
-          Client Reviews
-          <span></span>
-          <span></span>
-          <span></span>
-          <span></span>
+        <div id="header" class="ribbon">
+          <h1><a>Clients Reviews</a></h1>
         </div>
         <p style="text-align: justify; margin-top: 0.2in;"> We value our customers and look forward to receiving your
           feedback. Not only
