add changes to content in the services and about section

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <div class="home-content-box-inner text-center">
               <div class="home-heading animated fadeInDown">
                 <h3>
-                  Styles <br />
+                  Styles 
                 </h3>
               </div>
               <div class="home-btn wow fadeInUp" data-wow-delay="0.3s">
@@ -152,7 +152,7 @@
             <img src="img/service/braiding.jpg" alt="" class="img-fluid" />
             <div class="service-desc">
               Braiding
-              <p>Ksh.100</p>
+              <p>Ksh.500</p>
             </div>
           </div>
         </div>
@@ -161,7 +161,7 @@
             <img src="img/service/shave.jpg" alt="" class="img-fluid" />
             <div class="service-desc">
               Trimming
-              <p>Ksh.120</p>
+              <p>Ksh.200</p>
             </div>
           </div>
         </div>
@@ -170,7 +170,7 @@
             <img src="img/service/dreads.jpg" alt="" class="img-fluid" />
             <div class="service-desc">
               Dreadlocks
-              <p>Ksh.80</p>
+              <p>Ksh.2500</p>
             </div>
           </div>
         </div>
@@ -179,7 +179,7 @@
             <img src="img/service/colour.jpg" alt="" class="img-fluid" />
             <div class="service-desc">
               Coloring
-              <p>Ksh.70</p>
+              <p>Ksh.700</p>
             </div>
           </div>
         </div>
@@ -208,12 +208,11 @@
               We are Styles n' Smiles, located at The Junction Mall, ground floor-room 32. We chose this location for
               the convinience of our customers and to have a wider market to serve clients. Although we are online, we
               also have some reserved spaces to serve those who call in without prior appointment but this is not
-              convinient for most customers. This shop was initially formed by four people namely; Jorim Opondo, Rose
-              Kairu, Abdunasir Abdulkahir, Anita Kahenya and Donald Mwenda. We hired around twenty five stuff members
-              (15 professional salonists and 10 professional barbers) to ensure maximum benefit to the customers. They
-              do say time is money and time waits for no man. Don't you hate it when you have to follow a long queue
-              just to get a trim making you waste your time. Well at Styles n' Smiles, it is a different story. We try
-              to avoid that and we want our cutomers to have the best experience. We noticed that people usually end up
+              convenient for most customers. This shop was initially started by four people namely; Jorim Opondo, Rose
+              Kairu, Abdunasir Abdulkahir, Anita Kahenya and Donald Mwenda. We hired around twenty five staff members
+              (15 professional salonists and 10 professional barbers) to ensure maximum benefit for the clientele. It is said,
+              time and tide waits for no man. Don't you hate it when you have to follow a long queue just to get a trim making you waste your time. Well at Styles n' Smiles, it is a different story. We try
+              to avoid that and we want our clientele to have the best experience. We noticed that people usually end up
               wasting their time at the salon and barber. For us, people book appointments and the services to be
               offered at specified times. This has been one of our best accomplishents because customers do not have to
               waste their time and not forgeting the quality of our services. You are guaranteed to come out of our
