--- a/index.html
+++ b/index.html
@@ -722,7 +722,7 @@
         </div>
         <div class="row">
           <div class="col-md-5">
-            <span class="copyright">Copyright &copy; 2020 Design By Stles n Smiles Barbers & Salon
+            <span class="copyright">Copyright &copy; 2020 Design By Styles n Smiles Barbers & Salon
             </span>
           </div>
           <div class="col-md-3">
