add changes to button styling for booking form

--- a/index.html
+++ b/index.html
@@ -697,7 +697,7 @@
 
                 <div class="row form-group">
                   <div class="col-md-12">
-                    <input type="submit" value="Send" class="btn btn-primary py-2 px-4 text-white" />
+                    <input type="submit" value="Send" class="btn btn-general btn-greenish btn-sm text-uppercase" style="color: black; border-color: black;"/>
                   </div>
                 </div>
               </form>
