add changes to booking form section

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-4 my-auto">
+        <div class="col-md-6 my-auto">
           <div class="body-cont mb-5 wow fadeInUp" data-wow-delay="0.6s">
             <h3>Styles n' Smiles</h3>
             <div class="bord-bottom"></div>
@@ -223,7 +223,7 @@
                 class="btn btn-general btn-white">ENQUIRIES</button></a>
           </div>
         </div>
-        <div class="col-md-8 m-auto text-center">
+        <div class="col-md-6 m-auto text-center">
           <div class="body-img-1 wow fadeInUp" data-wow-delay="0.9s">
             <img src="img/treamer-small.png" alt="" class="img-fluid" />
           </div>
@@ -702,6 +702,10 @@
                 </div>
               </form>
             </div>
+            <div class="col-md-5 m-auto text-center">
+              <div class="body-img-1 wow fadeInUp" data-wow-delay="0.9s">
+                <img src="img/service/bg-book.jpeg" alt="" class="img-fluid" />
+              </div>
           </div>
         </div>
       </div>
