modified index file

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <div class="home-content-box-inner text-center">
               <div class="home-heading animated fadeInDown">
                 <h3>
-                  Styles 
+                  Styles
                 </h3>
               </div>
               <div class="home-btn wow fadeInUp" data-wow-delay="0.3s">
@@ -210,8 +210,10 @@
               also have some reserved spaces to serve those who call in without prior appointment but this is not
               convenient for most customers. This shop was initially started by four people namely; Jorim Opondo, Rose
               Kairu, Abdunasir Abdulkahir, Anita Kahenya and Donald Mwenda. We hired around twenty five staff members
-              (15 professional salonists and 10 professional barbers) to ensure maximum benefit for the clientele. It is said,
-              time and tide waits for no man. Don't you hate it when you have to follow a long queue just to get a trim making you waste your time. Well at Styles n' Smiles, it is a different story. We try
+              (15 professional salonists and 10 professional barbers) to ensure maximum benefit for the clientele. It is
+              said,
+              time and tide waits for no man. Don't you hate it when you have to follow a long queue just to get a trim
+              making you waste your time. Well at Styles n' Smiles, it is a different story. We try
               to avoid that and we want our clientele to have the best experience. We noticed that people usually end up
               wasting their time at the salon and barber. For us, people book appointments and the services to be
               offered at specified times. This has been one of our best accomplishents because customers do not have to
@@ -261,7 +263,7 @@
         <div class="col-md-4 col-sm-6">
           <div class="our-team wow fadeInUp" data-wow-delay="0.3s">
             <div class="pic">
-              <img src="img/team/team-1.jpg"/>
+              <img src="img/team/team-1.jpg" />
               <ul class="social">
                 <li>
                   <a href="#"><i class="fa fa-facebook"></i></a>
@@ -350,7 +352,7 @@
         <div class="col-md-4 col-sm-6">
           <div class="our-team wow fadeInUp" data-wow-delay="0.3s">
             <div class="pic">
-              <img src="img/team/team-1.jpg"/>
+              <img src="img/team/team-1.jpg" />
               <ul class="social">
                 <li>
                   <a href="#"><i class="fa fa-facebook"></i></a>
@@ -453,57 +455,57 @@
       <div class="row">
         <div class="col-md-3 col-sm-6 p-0">
           <div class="port-cont">
-            <a href="img/portfolio/portfolio-1.jpg" title="Salon Style">
+            <a href="img/portfolio/portfolio-1.jpg" title="HAIR CUT">
               <img src="img/portfolio/portfolio-1.jpg" alt="Salon Style" class="img-fluid" />
             </a>
           </div>
         </div>
         <div class="col-md-3 col-sm-6 p-0">
           <div class="port-cont">
-            <a href="img/portfolio/portfolio-2.jpg" title="Salon Style">
-              <img src="img/portfolio/portfolio-2.jpg" alt="Salon Style" class="img-fluid" />
+            <a href="img/portfolio/cornrows.jpg" title="CORNROWS ">
+              <img src="img/portfolio/cornrows.jpg" alt="Salon Style" class="img-fluid" />
             </a>
           </div>
         </div>
         <div class="col-md-3 col-sm-6 p-0">
           <div class="port-cont">
-            <a href="img/portfolio/portfolio-3.jpg" title="Salon Style">
-              <img src="img/portfolio/portfolio-3.jpg" alt="Salon Style" class="img-fluid" />
+            <a href="img/portfolio/straight.jpg" title="BLOW OUT">
+              <img src="img/portfolio/straight.jpg" alt="Salon Style" class="img-fluid" />
             </a>
           </div>
         </div>
         <div class="col-md-3 col-sm-6 p-0">
           <div class="port-cont">
-            <a href="img/portfolio/portfolio-4.jpg" title="Salon Style">
+            <a href="img/portfolio/portfolio-4.jpg" title="BEARD & MUSTACHE TRIM">
               <img src="img/portfolio/portfolio-4.jpg" alt="Salon Style" class="img-fluid" />
             </a>
           </div>
         </div>
         <div class="col-md-3 col-sm-6 p-0">
           <div class="port-cont">
-            <a href="img/portfolio/portfolio-8.jpg" title="Salon Style">
-              <img src="img/portfolio/portfolio-8.jpg" alt="Salon Style" class="img-fluid" />
+            <a href="img/portfolio/colour (1).jpg" title="HAIR COLOR">
+              <img src="img/portfolio/colour (1).jpg" alt="Salon Style" class="img-fluid" />
             </a>
           </div>
         </div>
         <div class="col-md-3 col-sm-6 p-0">
           <div class="port-cont">
-            <a href="img/portfolio/portfolio-6.jpg" title="Salon Style">
-              <img src="img/portfolio/portfolio-6.jpg" alt="Salon Style" class="img-fluid" />
+            <a href="img/portfolio/clean.jpg" title="CLEAN CUT">
+              <img src="img/portfolio/clean.jpg" alt="Salon Style" class="img-fluid" />
             </a>
           </div>
         </div>
         <div class="col-md-3 col-sm-6 p-0">
           <div class="port-cont">
-            <a href="img/portfolio/portfolio-7.jpg" title="Salon Style">
+            <a href="img/portfolio/portfolio-7.jpg" title="DREADLOCKS">
               <img src="img/portfolio/portfolio-7.jpg" alt="Salon Style" class="img-fluid" />
             </a>
           </div>
         </div>
         <div class="col-md-3 col-sm-6 p-0">
           <div class="port-cont">
-            <a href="img/portfolio/portfolio-5.jpg" title="Salon Style">
-              <img src="img/portfolio/portfolio-5.jpg" alt="Salon Style" class="img-fluid" />
+            <a href="img/portfolio/massage.jpg" title="HEAD AND NECK MASSAGE">
+              <img src="img/portfolio/massage.jpg" alt="Salon Style" class="img-fluid" />
             </a>
           </div>
         </div>
@@ -675,7 +677,7 @@
     </div>
 
   </section>
-  
+
 
 
   <!-- CONTACT FORM=================-->
@@ -788,7 +790,8 @@
 
                 <div class="row form-group">
                   <div class="col-md-12">
-                    <input type="submit" value="Send" class="btn btn-general btn-greenish btn-sm text-uppercase" style="color: black; border-color: black;"/>
+                    <input type="submit" value="Send" class="btn btn-general btn-greenish btn-sm text-uppercase"
+                      style="color: black; border-color: black;" />
                   </div>
                 </div>
               </form>
@@ -797,9 +800,9 @@
               <div class="body-img-1 wow fadeInUp" data-wow-delay="0.9s">
                 <img src="img/service/bg-book.jpeg" alt="" class="img-fluid" />
               </div>
+            </div>
           </div>
         </div>
-      </div>
     </section>
 
     <!-- CONTACT FORM
