modified index file

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
               We are Styles n' Smiles, located at The Junction Mall, ground floor-room 32. We chose this location for
               the convinience of our customers and to have a wider market to serve clients. Although we are online, we
               also have some reserved spaces to serve those who call in without prior appointment but this is not
-              convenient for most customers. This shop was initially started by four people namely; Jorim Opondo, Rose
+              convenient for most customers. This shop was initially started by Five people namely; Jorim Opondo, Rose
               Kairu, Abdunasir Abdulkahir, Anita Kahenya and Donald Mwenda. We hired around twenty five staff members
               (15 professional salonists and 10 professional barbers) to ensure maximum benefit for the clientele. It is
               said,
@@ -241,7 +241,7 @@
       <div class="row">
         <div class="col-md-6 my-auto">
           <div class="perfect-style-desc text-center wow fadeInLeft" data-wow-delay="0.3s">
-            <h3>Perfect Style</h3>
+            <h3>Styles n' Smiles </h3>
             <p>
               Its professional salon really offers a very large number of
               various different kinds of treatments and each and every
