add changes to about section

--- a/index.html
+++ b/index.html
@@ -208,21 +208,12 @@
               We are Styles n' Smiles, located at The Junction Mall, ground floor-room 32. We chose this location for
               the convinience of our customers and to have a wider market to serve clients. Although we are online, we
               also have some reserved spaces to serve those who call in without prior appointment but this is not
-<<<<<<< HEAD
-              convenient for most customers. This shop was initially started by four people namely; Jorim Opondo, Rose
-              Kairu, Abdinasir Abdulkadir, Anita Kahenya and Donald Mwenda. We hired around twenty five staff members
-              (15 professional salonists and 10 professional barbers) to ensure maximum benefit for the clientele. It is said,
-              time and tide waits for no man. Don't you hate it when you have to follow a long queue just to get a trim making you waste your time. Well at Styles n' Smiles, it is a different story. We try
-=======
-              convenient for most customers. This shop was initially started by Five people namely; Jorim Opondo, Rose
-              Kairu, Abdunasir Abdulkahir, Anita Kahenya and Donald Mwenda. We hired around twenty five staff members
+              convenient for most customers. This shop was initially started by Six people namely; Jorim Opondo, Rose
+              Kairu, Abdulnasir Abdulkadir, Anita Kahenya Donald Mwenda and Duncan Ondieki . We hired around twenty five staff members
               (15 professional salonists and 10 professional barbers) to ensure maximum benefit for the clientele. It is
-              said,
-              time and tide waits for no man. Don't you hate it when you have to follow a long queue just to get a trim
-              making you waste your time. Well at Styles n' Smiles, it is a different story. We try
->>>>>>> 378ddcc921bea0ac67447334b54cf0d91b3b2adc
-              to avoid that and we want our clientele to have the best experience. We noticed that people usually end up
-              wasting their time at the salon and barber. For us, people book appointments and the services to be
+              said, time and tide waits for no man. Don't you hate it when you have to follow a long queue just to get a trim
+              making you waste your time. Well at Styles n' Smiles, it is a different story. We try to avoid that and we want our clientele to have the best experience. 
+              We noticed that people usually end up wasting their time at the salon and barber. For us, people book appointments and the services to be
               offered at specified times. This has been one of our best accomplishents because customers do not have to
               waste their time and not forgeting the quality of our services. You are guaranteed to come out of our
               salon looking great. We can serve 10 customers simultaneously just to show you how fast we are. In the
